--- a/templates/index.html
+++ b/templates/index.html
@@ -118,6 +118,7 @@
                         placeholder="Write your message here..."
                     ></textarea>
                 </div>
+                <p style="color: rgb(255, 0, 0);"> {{alert}}</p>
                 <button type="submit" class="btn btn-primary">Send</button>
             </form>
         </div>
